--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,6 @@ services:
     build: .
     ports: 
       - 3000:3000
+    environment:
+      - AWS_ACCESS_KEY_ID=
+      - AWS_SECRET_ACCESS_KEY=
